--- a/Miinaharava/pom.xml
+++ b/Miinaharava/pom.xml
@@ -34,6 +34,14 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.4</version>
+                <configuration>
+                    <targetClasses>
+                        <param>miinaharava.logiikka.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>miinaharava.logiikka.*</param>                        
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
